--- a/src/model/page/HomePage.css
+++ b/src/model/page/HomePage.css
@@ -1,3 +1,19 @@
 main {
-    margin-top: 60px;
+    margin-top: 10px;
+}
+
+input {
+    color: white;
+    outline: none;
+    background-color: transparent;
+    border: transparent;
+    text-align: center;
+}
+
+input:focus {
+    outline: none;
+}
+
+input::placeholder {
+    color: white;
 }
